--- a/RepasoApp/Views/MainWindow.axaml
+++ b/RepasoApp/Views/MainWindow.axaml
@@ -1,12 +1,31 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:RepasoApp.ViewModels"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:fa="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
         xmlns:views="clr-namespace:RepasoApp.Views"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="RepasoApp.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
+        xmlns:dialogHostAvalonia="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
+        x:Class="RepasoApp.MainWindow"
+        Width="1100" Height="700"
         Title="RepasoApp">
-        <views:MainView />
+        
+        
+        <dialogHostAvalonia:DialogHost Identifier="RootDialog">
+                <fa:NavigationView x:Name="NavView" PaneDisplayMode="Left" IsBackButtonVisible="Collapsed">
+                        <fa:NavigationView.PaneHeader>
+                                <TextBlock Text="RepasoApp" FontSize="18" Margin="10"/>
+                        </fa:NavigationView.PaneHeader>
+
+                        <fa:NavigationView.MenuItems>
+                                <fa:NavigationViewItem Icon="Home" Content="Inicio" Tag="Welcome" />
+                                <fa:NavigationViewItem Icon="Add" Content="Alta producto" Tag="AltaProducto" />
+                                <fa:NavigationViewItem Icon="List" Content="Consulta productos" Tag="ConsultaProductos" />
+                                <fa:NavigationViewItem Icon="SignOut" Content="Logout" Tag="Logout" />
+                        </fa:NavigationView.MenuItems>
+
+                        <fa:NavigationView.Content>
+                                <ContentControl x:Name="ContentHolder" />
+                        </fa:NavigationView.Content>
+                </fa:NavigationView>
+        </dialogHostAvalonia:DialogHost>
 </Window>
+
+
