--- a/RepasoApp/Views/ConsultaProductosView.axaml
+++ b/RepasoApp/Views/ConsultaProductosView.axaml
@@ -1,14 +1,15 @@
 ﻿<UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewModels="clr-namespace:RepasoApp.ViewModels"
-             x:Class="RepasoApp.Views.ConsultaProductosView">
+             x:Class="RepasoApp.Views.ConsultaProductosView"
+             x:DataType="viewModels:ConsultaProductosViewModel">
     <Design.DataContext>
         <viewModels:ConsultaProductosViewModel />
     </Design.DataContext>
     <StackPanel  Spacing="8">
         <TextBlock Text="Consulta de productos" FontSize="22"/>
         <Button Content="Refrescar" Command="{Binding RefrescarCommand}" Width="120"/>
-        <ListBox Items="{Binding ListaProductos}" SelectedItem="{Binding ProductoSeleccionado}">
+        <ListBox ItemsSource="{Binding ListaProductos}" SelectedItem="{Binding ProductoSeleccionado}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Border Padding="6" Margin="4" BorderThickness="1">
@@ -16,18 +17,29 @@
                             <StackPanel Width="380">
                                 <TextBlock Text="{Binding CodigoBarras}" FontWeight="Bold"/>
                                 <TextBlock Text="{Binding Descripcion}" />
-                                <TextBlock Text="Cantidad: {Binding Cantidad}" />
-                                <TextBlock Text="Categoría: {Binding Categoria}" />
+                                <TextBlock Text="Cantidad:" />
+                                <TextBlock Text="{Binding Cantidad}" />
+                                <TextBlock Text="Categoria" />
+                                <TextBlock Text="{Binding Categoria}" />
                             </StackPanel>
-                            <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Center" Spacing="6">
-                                <Button Content="Editar" Command="{Binding DataContext.EditarCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding}" Width="80"/>
-                                <Button Content="Eliminar" Command="{Binding DataContext.EliminarCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding}" Width="80"/>
-                            </StackPanel>
+                            <!--<StackPanel DataContext="{Binding DataType=viewModels:ConsultaProductosViewModel}" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Center" Spacing="6">
+                                
+                                <Button Content="Editar" Command="{Binding EditarCommand}"></Button>
+                                <Button Content="Eliminar" Command="{Binding EliminarCommand}"></Button>
+                                
+                            </StackPanel>-->
                         </StackPanel>
                     </Border>
                 </DataTemplate>
+                
             </ListBox.ItemTemplate>
         </ListBox>
+        <StackPanel DataContext="{Binding DataType=viewModels:ConsultaProductosViewModel}" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Center" Spacing="6">
+                                
+            <Button Content="Editar" Command="{Binding EditarCommand}"></Button>
+            <Button Content="Eliminar" Command="{Binding EliminarCommand}"></Button>
+                                
+        </StackPanel>
         <TextBlock Text="{Binding Mensaje}" Foreground="Red"/>
     </StackPanel>
 </UserControl>
