--- a/RepasoApp/Views/LoginView.axaml
+++ b/RepasoApp/Views/LoginView.axaml
@@ -4,7 +4,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:RepasoApp.ViewModels"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             x:DataType="viewModels:LoginViewModel">
     <Design.DataContext>
         <viewModels:LoginViewModel />
     </Design.DataContext>
