--- a/RepasoApp/Views/WelcomeView.axaml
+++ b/RepasoApp/Views/WelcomeView.axaml
@@ -2,7 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="RepasoApp.Views.WelcomeView"
              xmlns:asyncImageLoader="clr-namespace:AsyncImageLoader;assembly=AsyncImageLoader.Avalonia"
-             xmlns:viewModels="clr-namespace:RepasoApp.ViewModels">
+             xmlns:viewModels="clr-namespace:RepasoApp.ViewModels"
+             x:DataType="viewModels:WelcomeViewModel">
     <Design.DataContext>
         <viewModels:WelcomeViewModel />
     </Design.DataContext>
